
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int tree ;
 int TREE_CODE (int ) ;


int
handled_component_p (tree t)
{
  switch (TREE_CODE (t))
    {
    case 132:
    case 131:
    case 133:
    case 134:
    case 128:
    case 129:
    case 130:
      return 1;

    default:
      return 0;
    }
}
